--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9a8092">  <td>24/05/29 21:30:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.ContactFormTest@593aaf41]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@65586123</td>   <td></td> </tr>
-<tr bgcolor="9a8092">  <td>24/05/29 21:30:12</td>   <td>-9497</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.ContactFormTest@593aaf41]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@65586123</td>   <td></td> </tr>
-<tr bgcolor="d68fcd">  <td>24/05/29 21:30:17</td>   <td>-4487</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactFormTest.sendMessageTest()[pri:0, instance:tests.ContactFormTest@593aaf41]">sendMessageTest</td> 
-  <td>main@65586123</td>   <td></td> </tr>
+<tr bgcolor="9a8092">  <td>24/06/03 20:38:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.XpathExample@593aaf41]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1042790962</td>   <td></td> </tr>
+<tr bgcolor="d68fcd">  <td>24/06/03 20:38:59</td>   <td>8183</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XpathExample.xpatheExample()[pri:1, instance:tests.XpathExample@593aaf41]">xpatheExample</td> 
+  <td>main@1042790962</td>   <td></td> </tr>
+<tr bgcolor="9a8092">  <td>24/06/03 20:38:59</td>   <td>8314</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.XpathExample@593aaf41]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1042790962</td>   <td></td> </tr>
 </table>
