--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9a8092">  <td>24/06/05 19:40:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.XpathExample2@54bff557]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2034182655</td>   <td></td> </tr>
-<tr bgcolor="9a8092">  <td>24/06/05 19:40:30</td>   <td>6980</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.XpathExample2@54bff557]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2034182655</td>   <td></td> </tr>
-<tr bgcolor="d68fcd">  <td>24/06/05 19:40:27</td>   <td>3554</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="XpathExample2.xpathExampleTest()[pri:0, instance:tests.XpathExample2@54bff557]">xpathExampleTest</td> 
-  <td>main@2034182655</td>   <td></td> </tr>
+<tr bgcolor="d68fcd">  <td>24/06/05 20:34:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ActionClassExample.dragAndDropExample()[pri:2, instance:tests.ActionClassExample@593aaf41]">dragAndDropExample</td> 
+  <td>main@1976804832</td>   <td></td> </tr>
+<tr bgcolor="d68fcd">  <td>24/06/05 20:34:13</td>   <td>-3373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ActionClassExample.hoverExample()[pri:1, instance:tests.ActionClassExample@593aaf41]">hoverExample</td> 
+  <td>main@1976804832</td>   <td></td> </tr>
+<tr bgcolor="9a8092">  <td>24/06/05 20:34:10</td>   <td>-7216</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.ActionClassExample@593aaf41]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1976804832</td>   <td></td> </tr>
+<tr bgcolor="9a8092">  <td>24/06/05 20:34:18</td>   <td>1597</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.ActionClassExample@593aaf41]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1976804832</td>   <td></td> </tr>
 </table>
