--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d68fcd">  <td>24/06/09 15:39:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShopNewReleasesTest.searchBook()[pri:0, instance:tests.ShopNewReleasesTest@54bff557]">searchBook</td> 
-  <td>main@2034182655</td>   <td></td> </tr>
-<tr bgcolor="9a8092">  <td>24/06/09 15:39:44</td>   <td>-5031</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.ShopNewReleasesTest@54bff557]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2034182655</td>   <td></td> </tr>
-<tr bgcolor="9a8092">  <td>24/06/09 15:40:05</td>   <td>16710</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.ShopNewReleasesTest@54bff557]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2034182655</td>   <td></td> </tr>
+<tr bgcolor="9a8092">  <td>24/06/09 18:56:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.ShippingAddressPageTest@5a56cdac]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1976804832</td>   <td></td> </tr>
+<tr bgcolor="9a8092">  <td>24/06/09 18:56:31</td>   <td>-11512</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:tests.ShippingAddressPageTest@5a56cdac]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1976804832</td>   <td></td> </tr>
+<tr bgcolor="d68fcd">  <td>24/06/09 18:56:35</td>   <td>-7753</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShippingAddressPageTest.validLoginTest()[pri:1, instance:tests.ShippingAddressPageTest@5a56cdac]">validLoginTest</td> 
+  <td>main@1976804832</td>   <td></td> </tr>
+<tr bgcolor="d68fcd">  <td>24/06/09 18:56:37</td>   <td>-5455</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ShippingAddressPageTest.shippingTest()[pri:2, instance:tests.ShippingAddressPageTest@5a56cdac]">shippingTest</td> 
+  <td>main@1976804832</td>   <td></td> </tr>
 </table>
