--- a/test-output/index.html
+++ b/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Suite1" class="navigator-link">
-              <span class="suite-name border-failed">Suite1</span>
+              <span class="suite-name border-passed">Suite1</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -93,21 +93,36 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method, 1 failed,   </span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Suite1" class="hide-methods failed suite-Suite1"> (hide)</a> <!-- hide-methods failed suite-Suite1 -->
-                      <a href="#" panel-name="suite-Suite1" class="show-methods failed suite-Suite1"> (show)</a> <!-- show-methods failed suite-Suite1 -->
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-Suite1" class="hide-methods passed suite-Suite1"> (hide)</a> <!-- hide-methods passed suite-Suite1 -->
+                      <a href="#" panel-name="suite-Suite1" class="show-methods passed suite-Suite1"> (show)</a> <!-- show-methods passed suite-Suite1 -->
                     </span>
-                    <div class="method-list-content failed suite-Suite1">
+                    <div class="method-list-content passed suite-Suite1">
                       <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite1" title="tests.WindowHandleExample" class="method navigator-link" hash-for-method="windowHandleTest">windowHandleTest</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite1" title="tests.DataProviderClassHome" class="method navigator-link" hash-for-method="searchAndAssertBookCategories(https://keybooks.ro/shop/a-banquet-of-mouse/, Romans)">searchAndAssertBookCategories(https://keybooks.ro/shop/a-banquet-of-mouse/, Romans)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content failed suite-Suite1 -->
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite1" title="tests.DataProviderClassHome" class="method navigator-link" hash-for-method="searchAndAssertBookCategories(https://keybooks.ro/shop/lonely-man-in-white-hat/, Romans)">searchAndAssertBookCategories(https://keybooks.ro/shop/lonely-man-in-white-hat/, Romans)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite1" title="tests.DataProviderClassHome" class="method navigator-link" hash-for-method="searchAndAssertBookCategories(https://keybooks.ro/shop/life-in-the-garden/, Romans)">searchAndAssertBookCategories(https://keybooks.ro/shop/life-in-the-garden/, Romans)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite1" title="tests.DataProviderClassHome" class="method navigator-link" hash-for-method="searchAndAssertBookCategories(https://keybooks.ro/shop/the-son/, Romans)">searchAndAssertBookCategories(https://keybooks.ro/shop/the-son/, Romans)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content passed suite-Suite1 -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -119,34 +134,46 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite1" class="panel Suite1">
-          <div class="suite-Suite1-class-failed">
+          <div class="suite-Suite1-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">tests.WindowHandleExample</span>
+              <img src="passed.png"/>
+              <span class="class-name">tests.DataProviderClassHome</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="windowHandleTest">
-                  </a> <!-- windowHandleTest -->
-                  <span class="method-name">windowHandleTest</span>
-                  <div class="stack-trace">org.openqa.selenium.TimeoutException: Expected condition failed: waiting for visibility of element located by By.linkText: View larger map (tried for 10 second(s) with 500 milliseconds interval)
-Build info: version: &apos;4.21.0&apos;, revision: &apos;79ed462ef4&apos;
-System info: os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.9&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 125.0.6422.142, chrome: {chromedriverVersion: 125.0.6422.141 (4b1e8393712..., userDataDir: C:\Users\C1C57~1.DUM\AppDat...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:54047}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:54047/devtoo..., se:cdpVersion: 125.0.6422.142, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Session ID: 97c58d72dcd58dba5a094309cb00b2ff
-	at org.openqa.selenium.support.ui.WebDriverWait.timeoutException(WebDriverWait.java:84)
-	at org.openqa.selenium.support.ui.FluentWait.until(FluentWait.java:228)
-	at selenium.utils.SeleniumWrappers.click(SeleniumWrappers.java:39)
-	at tests.WindowHandleExample.windowHandleTest(WindowHandleExample.java:40)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 27 stack frames
-</div> <!-- stack-trace -->
+                  <a name="searchAndAssertBookCategories(https://keybooks.ro/shop/a-banquet-of-mouse/, Romans)">
+                  </a> <!-- searchAndAssertBookCategories(https://keybooks.ro/shop/a-banquet-of-mouse/, Romans) -->
+                  <span class="method-name">searchAndAssertBookCategories</span>
+                  <span class="parameters">(https://keybooks.ro/shop/a-banquet-of-mouse/, Romans)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="searchAndAssertBookCategories(https://keybooks.ro/shop/lonely-man-in-white-hat/, Romans)">
+                  </a> <!-- searchAndAssertBookCategories(https://keybooks.ro/shop/lonely-man-in-white-hat/, Romans) -->
+                  <span class="method-name">searchAndAssertBookCategories</span>
+                  <span class="parameters">(https://keybooks.ro/shop/lonely-man-in-white-hat/, Romans)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="searchAndAssertBookCategories(https://keybooks.ro/shop/life-in-the-garden/, Romans)">
+                  </a> <!-- searchAndAssertBookCategories(https://keybooks.ro/shop/life-in-the-garden/, Romans) -->
+                  <span class="method-name">searchAndAssertBookCategories</span>
+                  <span class="parameters">(https://keybooks.ro/shop/life-in-the-garden/, Romans)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="searchAndAssertBookCategories(https://keybooks.ro/shop/the-son/, Romans)">
+                  </a> <!-- searchAndAssertBookCategories(https://keybooks.ro/shop/the-son/, Romans) -->
+                  <span class="method-name">searchAndAssertBookCategories</span>
+                  <span class="parameters">(https://keybooks.ro/shop/the-son/, Romans)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite1-class-failed -->
+          </div> <!-- suite-Suite1-class-passed -->
         </div> <!-- panel Suite1 -->
         <div panel-name="test-xml-Suite1" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -160,7 +187,7 @@ Session ID: 97c58d72dcd58dba5a094309cb00b2ff
   &lt;parameter name=&quot;appUrl&quot; value=&quot;https://keybooks.ro&quot;/&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;tests.WindowHandleExample&quot;/&gt;
+      &lt;class name=&quot;tests.DataProviderClassHome&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- test --&gt;
 &lt;/suite&gt; &lt;!-- Suite1 --&gt;
@@ -200,16 +227,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'windowHandleTest')
-data.setCell(0, 2, 'tests.WindowHandleExample')
-data.setCell(0, 3, 16207);
+data.setCell(0, 1, 'searchAndAssertBookCategories')
+data.setCell(0, 2, 'tests.DataProviderClassHome')
+data.setCell(0, 3, 4759);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'searchAndAssertBookCategories')
+data.setCell(1, 2, 'tests.DataProviderClassHome')
+data.setCell(1, 3, 4527);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'searchAndAssertBookCategories')
+data.setCell(2, 2, 'tests.DataProviderClassHome')
+data.setCell(2, 3, 4511);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'searchAndAssertBookCategories')
+data.setCell(3, 2, 'tests.DataProviderClassHome')
+data.setCell(3, 3, 4452);
 window.suiteTableData['Suite1']= { tableData: data, tableDiv: 'times-div-Suite1'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 16 seconds</span>
+              <span class="suite-total-time">Total running time: 18 seconds</span>
               <div id="times-div-Suite1">
               </div> <!-- times-div-Suite1 -->
             </div> <!-- times-div -->
@@ -235,24 +274,46 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.WindowHandleExample</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">tests.DataProviderClassHome</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup(https://keybooks.ro)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">windowHandleTest</span>
-                <span class="method-start">3660 ms</span>
+                <span class="method-name">searchAndAssertBookCategories(https://keybooks.ro/shop/a-banquet-of-mouse/, Romans)</span>
+                <span class="method-start">4039 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">recordFailure([TestResult name=windowHandleTest status=FAILURE method=WindowHandleExample.windowHandleTest()[pri:0...)</span>
-                <span class="method-start">19870 ms</span>
+                <span class="method-name">recordFailure([TestResult name=searchAndAssertBookCategories status=SUCCESS method=DataProviderClassHome.searchAnd...)</span>
+                <span class="method-start">8800 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">searchAndAssertBookCategories(https://keybooks.ro/shop/life-in-the-garden/, Romans)</span>
+                <span class="method-start">8801 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">searchAndAssertBookCategories(https://keybooks.ro/shop/lonely-man-in-white-hat/, Romans)</span>
+                <span class="method-start">13254 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">recordFailure([TestResult name=searchAndAssertBookCategories status=SUCCESS method=DataProviderClassHome.searchAnd...)</span>
+                <span class="method-start">13254 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="test-method">
+                <span class="method-name">searchAndAssertBookCategories(https://keybooks.ro/shop/the-son/, Romans)</span>
+                <span class="method-start">17782 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">recordFailure([TestResult name=searchAndAssertBookCategories status=SUCCESS method=DataProviderClassHome.searchAnd...)</span>
+                <span class="method-start">17782 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method after">
+                <span class="method-name">recordFailure([TestResult name=searchAndAssertBookCategories status=SUCCESS method=DataProviderClassHome.searchAnd...)</span>
+                <span class="method-start">22294 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">20270 ms</span>
+                <span class="method-start">22295 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
