--- a/test-output/old/Suite1/methods.html
+++ b/test-output/old/Suite1/methods.html
@@ -1,12 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="98cf9b">  <td>24/06/19 20:34:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:tests.WindowHandleExample@3a44431a]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
-<tr bgcolor="8edcc5">  <td>24/06/19 20:34:17</td>   <td>3653</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WindowHandleExample.windowHandleTest()[pri:0, instance:tests.WindowHandleExample@3a44431a]">windowHandleTest</td> 
-  <td>main@480490520</td>   <td></td> </tr>
-<tr bgcolor="98cf9b">  <td>24/06/19 20:34:34</td>   <td>19864</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.recordFailure(org.testng.ITestResult)[pri:0, instance:tests.WindowHandleExample@3a44431a]">&lt;&lt;recordFailure</td> 
-<td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
-<tr bgcolor="98cf9b">  <td>24/06/19 20:34:34</td>   <td>20263</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.WindowHandleExample@3a44431a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="8edcc5">  <td>24/06/27 10:42:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderClassHome.searchAndAssertBookCategories(java.lang.String,java.lang.String)[pri:0, instance:tests.DataProviderClassHome@7bab3f1a]">searchAndAssertBookCategories</td> 
+  <td>main@2075809815</td>   <td></td> </tr>
+<tr bgcolor="8edcc5">  <td>24/06/27 10:42:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderClassHome.searchAndAssertBookCategories(java.lang.String,java.lang.String)[pri:0, instance:tests.DataProviderClassHome@7bab3f1a]">searchAndAssertBookCategories</td> 
+  <td>main@2075809815</td>   <td></td> </tr>
+<tr bgcolor="98cf9b">  <td>24/06/27 10:42:53</td>   <td>4512</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.recordFailure(org.testng.ITestResult)[pri:0, instance:tests.DataProviderClassHome@7bab3f1a]">&lt;&lt;recordFailure</td> 
+<td>&nbsp;</td>  <td>main@2075809815</td>   <td></td> </tr>
+<tr bgcolor="98cf9b">  <td>24/06/27 10:42:53</td>   <td>4512</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.recordFailure(org.testng.ITestResult)[pri:0, instance:tests.DataProviderClassHome@7bab3f1a]">&lt;&lt;recordFailure</td> 
+<td>&nbsp;</td>  <td>main@2075809815</td>   <td></td> </tr>
+<tr bgcolor="8edcc5">  <td>24/06/27 10:42:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderClassHome.searchAndAssertBookCategories(java.lang.String,java.lang.String)[pri:0, instance:tests.DataProviderClassHome@7bab3f1a]">searchAndAssertBookCategories</td> 
+  <td>main@2075809815</td>   <td></td> </tr>
+<tr bgcolor="8edcc5">  <td>24/06/27 10:42:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderClassHome.searchAndAssertBookCategories(java.lang.String,java.lang.String)[pri:0, instance:tests.DataProviderClassHome@7bab3f1a]">searchAndAssertBookCategories</td> 
+  <td>main@2075809815</td>   <td></td> </tr>
+<tr bgcolor="98cf9b">  <td>24/06/27 10:42:53</td>   <td>4512</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.recordFailure(org.testng.ITestResult)[pri:0, instance:tests.DataProviderClassHome@7bab3f1a]">&lt;&lt;recordFailure</td> 
+<td>&nbsp;</td>  <td>main@2075809815</td>   <td></td> </tr>
+<tr bgcolor="98cf9b">  <td>24/06/27 10:42:53</td>   <td>4512</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.recordFailure(org.testng.ITestResult)[pri:0, instance:tests.DataProviderClassHome@7bab3f1a]">&lt;&lt;recordFailure</td> 
+<td>&nbsp;</td>  <td>main@2075809815</td>   <td></td> </tr>
+<tr bgcolor="98cf9b">  <td>24/06/27 10:42:30</td>   <td>-17774</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup(java.lang.String)[pri:0, instance:tests.DataProviderClassHome@7bab3f1a]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2075809815</td>   <td></td> </tr>
+<tr bgcolor="98cf9b">  <td>24/06/27 10:42:53</td>   <td>4513</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:tests.DataProviderClassHome@7bab3f1a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2075809815</td>   <td></td> </tr>
 </table>
